package wavefront;

public class Vector2 {
    
    public double x;
    public double y;

    @Override
    public String toString() {
        return "[" + x + ", " + y + ']';
    }
}
