package wavefront;

public class Vector3 {

    public double x;
    public double y;
    public double z;

    @Override
    public String toString() {
        return "[" + x + ", " + y + ", " + z + ']';
    }
}
